--- a/app/src/main/res/layout/register_tab_fragment.xml
+++ b/app/src/main/res/layout/register_tab_fragment.xml
@@ -4,13 +4,32 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:layout_marginTop="50dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center">
+
+        <!--        <Button-->
+        <!--            android:drawableBottom="@drawable/ic_camera"-->
+        <!--            android:background="@drawable/border_edittext"-->
+        <!--            android:id="@+id/btn_register_avatar"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent"/>-->
+        <Button
+            android:id="@+id/btn_choose_avatar"
+            android:src="@drawable/phocohoian"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/border_edittext"
+            android:drawableBottom="@drawable/ic_camera"/>
+    </RelativeLayout>
 
     <EditText
-
-        android:layout_marginTop="50dp"
         android:id="@+id/edt_register_username"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
+        android:layout_margin="10dp"
         android:background="@drawable/border_edittext"
         android:drawableLeft="@drawable/ic_user"
         android:gravity="center"
@@ -19,11 +38,21 @@
 
 
     <EditText
-
-        android:layout_marginTop="15dp"
+        android:inputType="datetime"
+        android:id="@+id/edt_register_dateofbirth"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/border_edittext"
+        android:drawableLeft="@drawable/ic_calendar"
+        android:gravity="center"
+        android:hint="Nhập ngày sinh"
+        android:textColorHint="#8525A4C7" />
+    <EditText
+        android:layout_margin="10dp"
         android:id="@+id/edt_register_password"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:background="@drawable/border_edittext"
         android:drawableLeft="@drawable/ic_password"
         android:gravity="center"
@@ -33,10 +62,11 @@
 
 
     <EditText
-        android:layout_marginTop="15dp"
+        android:layout_margin="10dp"
         android:id="@+id/edt_register_prepassword"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
+
         android:background="@drawable/border_edittext"
         android:drawableLeft="@drawable/ic_password"
         android:gravity="center"
@@ -46,10 +76,11 @@
 
 
     <EditText
-        android:layout_marginTop="15dp"
+        android:layout_margin="10dp"
         android:id="@+id/edt_register_phonenumber"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
+
         android:background="@drawable/border_edittext"
         android:drawableLeft="@drawable/ic_phone_number"
         android:gravity="center"
@@ -59,10 +90,11 @@
 
 
     <EditText
-        android:layout_marginTop="15dp"
+        android:layout_margin="10dp"
         android:id="@+id/edt_register_email"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
+
         android:background="@drawable/border_edittext"
         android:drawableLeft="@drawable/ic_mail"
         android:gravity="center"
@@ -72,10 +104,11 @@
 
 
     <Button
-        android:layout_marginTop="15dp"
+        android:layout_margin="10dp"
         android:id="@+id/btn_register_createaccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        
         android:background="@drawable/border_button"
         android:text="Tạo tài khoản"
         android:textAllCaps="false"
