--- a/app/src/main/res/drawable/border_image.xml
+++ b/app/src/main/res/drawable/border_image.xml
@@ -1,16 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-
-    <solid
-        android:color="@color/white"/>
-
-    <size
-        android:width="20dp"
-        android:height="20dp"/>
-    <stroke
-        android:width="4dp" android:color="@android:color/black"/>
-    <padding android:left="1dp" android:top="1dp" android:right="1dp"
-        android:bottom="1dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="30dp"></corners>
+    <stroke android:color="@color/white" android:width="30dp"></stroke>
 </shape>
