--- a/app/src/main/res/layout/custom_listview_newfeeds.xml
+++ b/app/src/main/res/layout/custom_listview_newfeeds.xml
@@ -1,23 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/border_frame">
+    android:background="@drawable/border_frame"
+    android:orientation="vertical">
+
     <TextView
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:id="@+id/custom_listview_tv_title"
+        android:id="@+id/tv_customlistiview_newfeed_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="title"/>
-    <TextView
-        android:textSize="14sp"
+        android:layout_margin="10dp"
+        android:text="title"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+    <View
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/primary"/>
+    <ScrollView
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/custom_listview_tv_content"
-        android:text="content"/>
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            // all the views currently in your ScrollView
+
+            <TextView
+                android:padding="10dp"
+                android:maxHeight="100dp"
+                android:id="@+id/tv_customlistiview_newfeed_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="content"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+        </LinearLayout>
+    </ScrollView>
+
     <ImageView
-        android:id="@+id/custom_listview_img_thumbnail"
+        android:id="@+id/img_customlistiview_newfeed_thumbnail"
         android:layout_width="match_parent"
-        android:layout_height="300dp"/>
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:scaleType="centerCrop"
+        android:layout_margin="10dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:weightSum="10">
+
+        <EditText
+            android:id="@+id/edt_customlistiview_newfeed_comment"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_weight="2"
+            android:background="@drawable/border_edittext"
+            android:paddingLeft="10dp"
+            android:hint="Comment somethings.." />
+
+        <Button
+            android:id="@+id/btn_customlistiview_newfeed_comment"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_weight="8"
+            android:background="@drawable/border_button"
+            android:text="Bình luận"
+            android:textColor="@color/white" />
+    </LinearLayout>
+    <View
+        android:layout_margin="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/primary"/>
 </LinearLayout>
