--- a/app/src/main/res/layout/register_tab_fragment.xml
+++ b/app/src/main/res/layout/register_tab_fragment.xml
@@ -1,119 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<LinearLayout
+        android:gravity="center"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="390dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_marginTop="50dp"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center">
-
-        <!--        <Button-->
-        <!--            android:drawableBottom="@drawable/ic_camera"-->
-        <!--            android:background="@drawable/border_edittext"-->
-        <!--            android:id="@+id/btn_register_avatar"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="match_parent"/>-->
-        <Button
-            android:id="@+id/btn_choose_avatar"
-            android:src="@drawable/phocohoian"
+    <ScrollView
+            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/border_edittext"
-            android:drawableBottom="@drawable/ic_camera"/>
-    </RelativeLayout>
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
 
-    <EditText
-        android:id="@+id/edt_register_username"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_margin="10dp"
-        android:background="@drawable/border_edittext"
-        android:drawableLeft="@drawable/ic_user"
-        android:gravity="center"
-        android:hint="Nhập tài khoản"
-        android:textColorHint="#8525A4C7" />
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
+            <RelativeLayout
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_gravity="center">
 
-    <EditText
-        android:inputType="datetime"
-        android:id="@+id/edt_register_dateofbirth"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_margin="10dp"
-        android:background="@drawable/border_edittext"
-        android:drawableLeft="@drawable/ic_calendar"
-        android:gravity="center"
-        android:hint="Nhập ngày sinh"
-        android:textColorHint="#8525A4C7" />
-    <EditText
-        android:layout_margin="10dp"
-        android:id="@+id/edt_register_password"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/border_edittext"
-        android:drawableLeft="@drawable/ic_password"
-        android:gravity="center"
-        android:hint="Nhập mật khẩu"
-        android:inputType="textPassword"
-        android:textColorHint="#8525A4C7" />
+                <ImageView
+                        android:id="@+id/btn_choose_avatar"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_marginLeft="25dp"
+                        android:layout_marginTop="25dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_user"/>
+
+                <TextView
+                        android:layout_width="300dp"
+                        android:layout_height="300dp"
+                        android:background="@drawable/border_image"
+                        android:drawableBottom="@drawable/ic_camera"/>
+            </RelativeLayout>
 
 
-    <EditText
-        android:layout_margin="10dp"
-        android:id="@+id/edt_register_prepassword"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-
-        android:background="@drawable/border_edittext"
-        android:drawableLeft="@drawable/ic_password"
-        android:gravity="center"
-        android:hint="Nhập lại mật khẩu"
-        android:inputType="textPassword"
-        android:textColorHint="#8525A4C7" />
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
 
-    <EditText
-        android:layout_margin="10dp"
-        android:id="@+id/edt_register_phonenumber"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
+                <EditText
+                        android:id="@+id/edt_register_username"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_margin="10dp"
+                        android:background="@drawable/border_edittext"
+                        android:drawableLeft="@drawable/ic_user"
+                        android:gravity="center"
+                        android:hint="Username"
+                        android:textColorHint="#8525A4C7"/>
 
-        android:background="@drawable/border_edittext"
-        android:drawableLeft="@drawable/ic_phone_number"
-        android:gravity="center"
-        android:hint="Nhập số điện thoại"
-        android:inputType="phone"
-        android:textColorHint="#8525A4C7" />
+                <EditText
+                        android:id="@+id/edt_register_fullname"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_margin="10dp"
+                        android:background="@drawable/border_edittext"
+                        android:drawableLeft="@drawable/ic_name"
+                        android:gravity="center"
+                        android:hint="Full name"
+                        android:textColorHint="#8525A4C7"/>
+
+                <EditText
+                        android:id="@+id/edt_register_dateofbirth"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_margin="10dp"
+                        android:background="@drawable/border_edittext"
+                        android:drawableLeft="@drawable/ic_calendar"
+                        android:gravity="center"
+                        android:hint="Date of birth"
+                        android:inputType="datetime"
+                        android:textColorHint="#8525A4C7"/>
+
+                <EditText
+                        android:id="@+id/edt_register_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_margin="10dp"
+                        android:background="@drawable/border_edittext"
+                        android:drawableLeft="@drawable/ic_password"
+                        android:gravity="center"
+                        android:hint="Password"
+                        android:inputType="textPassword"
+                        android:textColorHint="#8525A4C7"/>
 
 
-    <EditText
-        android:layout_margin="10dp"
-        android:id="@+id/edt_register_email"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
+                <EditText
+                        android:id="@+id/edt_register_prepassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_margin="10dp"
 
-        android:background="@drawable/border_edittext"
-        android:drawableLeft="@drawable/ic_mail"
-        android:gravity="center"
-        android:hint="Nhập địa chỉ Email"
-        android:inputType="textEmailAddress"
-        android:textColorHint="#8525A4C7" />
+                        android:background="@drawable/border_edittext"
+                        android:drawableLeft="@drawable/ic_password"
+                        android:gravity="center"
+                        android:hint="Pre password"
+                        android:inputType="textPassword"
+                        android:textColorHint="#8525A4C7"/>
 
 
-    <Button
-        android:layout_margin="10dp"
-        android:id="@+id/btn_register_createaccount"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        
-        android:background="@drawable/border_button"
-        android:text="Tạo tài khoản"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="15sp" />
+                <EditText
+                        android:id="@+id/edt_register_phonenumber"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_margin="10dp"
+                        android:background="@drawable/border_edittext"
+                        android:drawableLeft="@drawable/ic_phone_number"
+                        android:gravity="center"
+                        android:hint="Phone number"
+                        android:inputType="phone"
+                        android:textColorHint="#8525A4C7"/>
+
+
+                <EditText
+                        android:id="@+id/edt_register_email"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_margin="10dp"
+                        android:background="@drawable/border_edittext"
+                        android:drawableLeft="@drawable/ic_mail"
+                        android:gravity="center"
+                        android:hint="Email"
+                        android:inputType="textEmailAddress"
+                        android:textColorHint="#8525A4C7"/>
+
+
+                <Button
+                        android:id="@+id/btn_register_createaccount"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:background="@drawable/border_button"
+                        android:text="Create new account"
+                        android:textAllCaps="false"
+                        android:textColor="@color/white"
+                        android:textSize="15sp"/>
+
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
